# heartkit-demo

./: README.md  asset-manifest.json  index.html  manifest.json  package-lock.json  package.json  tsconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yaml
public/: index.html  manifest.json
python/: README.md  pyproject.toml
python/configs/: heartkit-demo.json
python/heartkit/: defines.py  demo.py  evb.py  server.py  ui.py  utils.py
src/: App.tsx
src/api/: server.ts
src/assets/icons/: index.tsx
src/constants/: index.ts
src/models/: root.ts  store.ts
src/pages/DashboardView/: DashboardView.tsx
src/pages/DashboardView/components/: BeatChart.tsx  BeatsPlot.tsx  DashboardHeader.tsx  EcgPlot.tsx  HeartBeatCard.tsx  HeartChart.tsx  HeartRateCard.tsx  HeartRateChart.tsx  HeartRhythmCard.tsx
static/css/: main.9fdc41ab.css  main.9fdc41ab.css.map
static/js/: 787.63036e06.chunk.js  787.63036e06.chunk.js.map  main.c171772c.js  main.c171772c.js.LICENSE.txt  main.c171772c.js.map  main.f042e29f.js  main.f042e29f.js.map
